--- a/client/index.html
+++ b/client/index.html
@@ -9,5 +9,7 @@
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
+		<script src="https://cdn.botpress.cloud/webchat/v2/inject.js"></script>
+		<script src="https://mediafiles.botpress.cloud/eae3ea65-abea-4be8-b437-da74863dbfc8/webchat/v2/config.js"></script>
 	</body>
 </html>
